--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-09-06 09:49:27
-# Total rules: 7279
+# Generated from relevant_rules_wildcard_aware.txt on 2025-09-07 11:05:10
+# Total rules: 7319
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -7,6 +7,7 @@
 .0nvdw1kkeb.data.adobedc.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
+.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .119.29.196.104.bc.googleusercontent.com
 .1208344341.rsc.cdn77.org
@@ -16,7 +17,6 @@
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .1437953666.rsc.cdn77.org
 .1480876790.rsc.cdn77.org
-.1493361689.rsc.cdn77.org
 .1529462937.rsc.cdn77.org
 .1548164934.rsc.cdn77.org
 .1558334541.rsc.cdn77.org
@@ -28,13 +28,17 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
+.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2ihjjahguz.data.adobedc.net
 .2mdn.net
 .2xbits.eu.org
 .365dmp.com
 .37bvsblobprodcus311.blob.core.windows.net
+.3dns-1.adobe.com
 .3dns-2.adobe.com
 .3dns-3.adobe.com
+.3dns-4.adobe.com
+.3dns.adobe.com
 .3e9le7p41u.data.adobedc.net
 .3kbmk3nerc.data.adobedc.net
 .3rd.t.sohu.com
@@ -598,6 +602,7 @@
 .ad-particlenews-com-2-1579123584.us-west-2.elb.amazonaws.com
 .ad-pdf.s3.amazonaws.com
 .ad-serve.b-cdn.net
+.ad-survey.com
 .ad-tech-pyxis-uat-1649189048.us-west-2.elb.amazonaws.com
 .ad-xc-alb-852146862.ap-northeast-2.elb.amazonaws.com
 .ad.12306.cn
@@ -613,6 +618,7 @@
 .ad.dev.360.cn
 .ad.docer.wps.cn
 .ad.doubanio.com
+.ad.eporner.com
 .ad.gmw.cn
 .ad.gt.cdn.cloudflare.net
 .ad.imp.joins.com
@@ -653,6 +659,7 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
+.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -797,6 +804,7 @@
 .ads.prd.ie.internal.unity3d.com
 .ads.privacy.qq.com
 .ads.reddit.com
+.ads.rmbl.ws.cdn.cloudflare.net
 .ads.samsung.com
 .ads.service.kugou.com
 .ads.sohu.com
@@ -946,6 +954,7 @@
 .aepxlg.adobe.com
 .afd.baidu.com
 .afd.l.google.com
+.affiliate.googleusercontent.com
 .affiliates.bhphotovideo.com
 .affilimate.io
 .affim.baidu.com
@@ -1006,7 +1015,6 @@
 .amp-error-reporting.appspot.com
 .amplify-com-mktg.imgix.net
 .amplitude.com
-.ampmetrics.engadget.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
 .ams-pageview-public.s3.amazonaws.com
 .an.facebook.com
@@ -1023,7 +1031,6 @@
 .analytics-consent-manager-v2-prod.azureedge.net
 .analytics-consent-manager.azureedge.net
 .analytics-dev-lleap-events.servicebus.windows.net
-.analytics-digit-in.cdn.ampproject.org
 .analytics-events.apple.com
 .analytics-ingestion-2000866608.ap-south-1.elb.amazonaws.com
 .analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
@@ -1040,6 +1047,7 @@
 .analytics.adobe.io
 .analytics.archive.org
 .analytics.authoritymedia.com
+.analytics.belkin.com
 .analytics.bigdata.samsung.com
 .analytics.bloomberg.com
 .analytics.brave.com
@@ -1159,7 +1167,6 @@
 .api.miwifi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
-.api.sec.intl.miui.com
 .api.sentry.susercontent.com
 .api.setting.intl.miui.com
 .api.sms.intl.miui.com
@@ -1250,9 +1257,7 @@
 .as.mgtv.com
 .as.weixin.qq.com
 .as1.wenku.baidu.com
-.as54rdxfzxs.appspot.com
 .ascpqnj-oam.global.ssl.fastly.net
-.asgh65tfsdxz.appspot.com
 .asia-northeast1-affiliate-pr.cloudfunctions.net
 .assistjs.skimresources.com
 .assp.sohu.com
@@ -1466,19 +1471,53 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
+.c.ar.msn.com
 .c.arstechnica.com
+.c.at.msn.com
 .c.baidu.com
+.c.be.msn.com
 .c.bingapis.com
+.c.br.msn.com
+.c.ca.msn.com
+.c.cl.msn.com
+.c.de.msn.com
+.c.dk.msn.com
+.c.es.msn.com
+.c.fi.msn.com
+.c.fr.msn.com
 .c.gj.qq.com
+.c.gr.msn.com
+.c.hk.msn.com
+.c.id.msn.com
+.c.ie.msn.com
+.c.il.msn.com
+.c.in.msn.com
+.c.it.msn.com
+.c.jp.msn.com
+.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
+.c.my.msn.com
 .c.newyorker.com
+.c.nl.msn.com
+.c.no.msn.com
+.c.ph.msn.com
+.c.prodigy.msn.com
+.c.pt.msn.com
+.c.ru.msn.com
 .c.sayhi.360.cn
+.c.se.msn.com
+.c.sg.msn.com
 .c.sm.cn
+.c.th.msn.com
+.c.tr.msn.com
+.c.tw.msn.com
 .c.uaa.iqiyi.com
+.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
+.c.za.msn.com
 .c00.adobe.com
 .c0e5b87c.solaraweb-alj.pages.dev
 .c0nt4ct-me.pages.dev
@@ -1500,7 +1539,6 @@
 .capture.condenastdigital.com
 .carbonads.com
 .cards-css.iqiyi.com
-.care.help.360.cn
 .carecredit.com.data.adobedc.net
 .carecreditprovidercenter.com.data.adobedc.net
 .carmax.data.adobedc.net
@@ -1530,7 +1568,6 @@
 .cdn-pci.optimizely.com
 .cdn-s-optional.optimizely.com
 .cdn.ark.qq.com
-.cdn.cookielaw.org
 .cdn.eu.pendo.io
 .cdn.exp.xiaomi.com
 .cdn.onesignal.com
@@ -1650,6 +1687,7 @@
 .cms.ucweb.com
 .cmshow.gtimg.cn
 .cmsjs.eastmoney.com
+.cmweb.ilike.alibaba.com
 .cn.vercount.one
 .cnbj1.fds.api.xiaomi.com
 .cnc-ad-script-uncached.b-cdn.net
@@ -1973,6 +2011,7 @@
 .cpu.baidu.com
 .cpucdn.baidu.com
 .cpux.gmud.top
+.cquotient.com
 .cr.adobe.com
 .crab.baidu.com
 .crash.163.com
@@ -2008,7 +2047,6 @@
 .cstm.baidu.com
 .ctobsnssdk.com
 .ctr.hd.sohu.com
-.cu-cn-north00001.gala.convection.cn
 .cu-cn-north00002.gala.convection.cn
 .cub7ktzma4.data.adobedc.net
 .curiosity-seven.vercel.app
@@ -2028,7 +2066,6 @@
 .d0.sina.com.cn
 .d0.sinaimg.cn
 .d00.sina.com.cn
-.d1.ads.rmbl.ws.cdn.cloudflare.net
 .d1.sina.com.cn
 .d1.sinaimg.cn
 .d108nnfn2eigw4.cloudfront.net
@@ -2483,7 +2520,6 @@
 .d1zxg9iar5y3ur.cloudfront.net
 .d1zy4z3rd7svgh.cloudfront.net
 .d1zzcae3f37dfx.cloudfront.net
-.d2.ads.rmbl.ws.cdn.cloudflare.net
 .d2.sina.com.cn
 .d2.sinaimg.cn
 .d200108c6x0w2v.cloudfront.net
@@ -3330,7 +3366,6 @@
 .d9yk47of1efyy.cloudfront.net
 .da.mgtv.com
 .da.netease.com
-.da032opzasz.appspot.com
 .da26k71rxh0kb.cloudfront.net
 .da327va27j0hh.cloudfront.net
 .da3uf5ucdz00u.cloudfront.net
@@ -3453,6 +3488,7 @@
 .dcv4p460uqa46.cloudfront.net
 .dczhbhtz52fpi.cloudfront.net
 .dd.browser.360.cn
+.dd.huggingface.co
 .dd.nytimes.com
 .dd.reuters.com
 .dd6ym5in4ovm3.cloudfront.net
@@ -3483,6 +3519,7 @@
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
 .demoamericas275.adobe.com
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .deskwww.s3.amazonaws.com
 .dev-push.m.youku.com
@@ -3522,7 +3559,6 @@
 .dgpp7fq3iorb.cloudfront.net
 .dgw7ae5vrovs7.cloudfront.net
 .dgyrizngtcfck.cloudfront.net
-.dgyu536ds.appspot.com
 .dh0c1bz67fuho.cloudfront.net
 .dh0uktvqfaomb.cloudfront.net
 .dh6dm31izb875.cloudfront.net
@@ -3729,6 +3765,7 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
+.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -3939,7 +3976,6 @@
 .epic-matomo-prd-fxccc0gmebhpdjgh.z01.azurefd.net
 .epro.sogou.com
 .epro.sohu.com
-.eqit9pzsxz.appspot.com
 .erebor.douban.com
 .ereg.adobe.com
 .err.taobao.com
@@ -4038,7 +4074,6 @@
 .feed.baidu.com
 .feedback-c.zijieapi.com
 .feedback.miui.com
-.feedback.uc.cn
 .feedbackstorage.blob.core.chinacloudapi.cn
 .feedbackws.icloud.com
 .fengkongcloud.com
@@ -4166,7 +4201,6 @@
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
 .gdfp.gifshow.com
-.gdh4szx.appspot.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gdtimg.com
@@ -4195,6 +4229,7 @@
 .gigachadlitics.b-cdn.net
 .gimg.baidu.com
 .gimp.zendesk.com
+.giocdn.com
 .gjapplog.uc.cn
 .gjapplog.ucweb.com
 .gjtrack.uc.cn
@@ -4305,13 +4340,11 @@
 .heoads.b-cdn.net
 .hesads.akamaized.net
 .hg-statsd.setapp.com
-.hg76ytsdas.appspot.com
 .hghrkhbztb.data.adobedc.net
 .hijack.baidu.com
 .hilton.data.adobedc.net
 .historytrade.com
 .hits.theguardian.com
-.hj67fadszx.appspot.com
 .hjkhxfh.360doc.cn
 .hk.napi.ucweb.com
 .hk2.wns.windows.com
@@ -4389,10 +4422,8 @@
 .hk2sch130022135.wns.windows.com
 .hk2wns1.wns.windows.com
 .hk2wns1b.wns.windows.com
-.hk567rsda.appspot.com
 .hkjcweb.data.adobedc.net
 .hkrpg-log-upload.mihoyo.com
-.hksdf924pzxoias.appspot.com
 .hl2rcv.adobe.com
 .hlrcv.stage.adobe.com
 .hm.baidu.com
@@ -4536,6 +4567,7 @@
 .imagev2.tx.xmcdn.com
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
+.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
 .img.ssl.msdk.qq.com
@@ -4579,7 +4611,6 @@
 .install2.kugou.com
 .installer.xiaomi.com
 .instant-e-app-for-campaign.github.io
-.instory-log.ucnews.ucweb.com
 .int.dpool.sina.com.cn
 .intake-analytics.wikimedia.org
 .intake-logging.wikimedia.org
@@ -4620,7 +4651,6 @@
 .iwan-s.video.qq.com
 .iwan.sogou.com
 .iwanad.baidu.com
-.iwe8pzosa.appspot.com
 .iyes.youku.com
 .j.br.baidu.com
 .j.wit.qq.com
@@ -4652,6 +4682,7 @@
 .jr.airstarfinance.net
 .jrclick.jd.com
 .js-ad.a.yximgs.com
+.js.driftt.com
 .js.newrutor.eu.org
 .js.nyt.com
 .jscdnweb.pages.dev
@@ -4661,9 +4692,9 @@
 .jswebcollects.kugou.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
+.jzclick.soso.com
 .jzt.jd.com
 .k.qwant.com
-.k87yfgsdaa.appspot.com
 .kalstats.kaltura.com
 .kbox-analytics-backup.s3-accelerate.amazonaws.com
 .kbox-analytics-prod.s3-accelerate.amazonaws.com
@@ -4673,7 +4704,6 @@
 .kepler.jd.com
 .kew3pculob.data.adobedc.net
 .key.com.data.adobedc.net
-.kga9szxosa.appspot.com
 .kgb-ifs.tanx.com
 .kgipadstat.kugou.com
 .kgipadstatbak.kugou.com
@@ -4682,13 +4712,10 @@
 .kinesis.eu-west-1.amazonaws.com
 .kingdata.ksyun.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
-.kj65rdasz.appspot.com
-.kj6787rsd.appspot.com
 .kjdsfjisdfjr23.azurewebsites.net
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
 .knicks.jd.com
 .kq7rqzqxy4.data.adobedc.net
-.kr9apzxosa.appspot.com
 .kraken-measurements.s3-external-1.amazonaws.com
 .kroger.data.adobedc.net
 .ks-p2p-v2.pull.yximgs.com
@@ -4980,7 +5007,6 @@
 .mail-ads.google.com
 .mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
-.mailsupport-24f7f1500ed129bc71f2ad9c06fe1e73.pages.dev
 .maliva-mcs.byteoversea.com
 .mam.netease.com
 .mam6.netease.com
@@ -4993,7 +5019,6 @@
 .marketing.alibaba.com
 .marketing.dropbox.com
 .marketing.mangacopy.com
-.marketingplatform.google.com
 .marketingweek.imgix.net
 .marketo.clearbit.com
 .mars.jd.com
@@ -5078,6 +5103,7 @@
 .metrics.sciencedirect.com
 .metrics.sites.stanford.edu
 .metrics.stanford.edu
+.metrics.theatlantic.com
 .metrics.zacks.com
 .mg.games.sina.com.cn
 .mgtv-bbqn.oss-cn-beijing.aliyuncs.com
@@ -5116,6 +5142,7 @@
 .mjca-yijws.global.ssl.fastly.net
 .ml314.com
 .mllog.jd.com
+.mlpoo11-secondary.z13.web.core.windows.net
 .mmgame.qpic.cn
 .mms.lifehacker.com
 .mn.qwant.com
@@ -5138,6 +5165,7 @@
 .mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
 .mobilecrashreporting.googleapis.com
+.mobileleads.msn.com
 .mobilelog.kugou.com
 .mobilem.360.cn
 .mobilemsg.youku.com
@@ -5160,6 +5188,7 @@
 .monitor.azure.com
 .monitor.music.qq.com
 .monitor.qq.com
+.mononoteapp.firebaseio.com
 .monorail-edge.shopifysvc.com
 .monsetting.toutiao.com
 .mosaicone-lb-telemetry-prod-56a065490ca45ae3.elb.us-east-1.amazonaws.com
@@ -5275,7 +5304,6 @@
 .nexusrules.officeapps.live.com
 .nexxtv-events.servicebus.windows.net
 .nfa.jd.com
-.nffdg43zx.appspot.com
 .nflshop.com.data.adobedc.net
 .nfsvgvusih.data.adobedc.net
 .nhtradecfg.eastmoney.com
@@ -5312,6 +5340,7 @@
 .nsp-logservice-weardevice-p51-drcn.obs.cn-north-2.myhuaweicloud.com
 .nvm6zgsnhj.data.adobedc.net
 .nxet1.360doc.cn
+.nytadvertising.nytimes.com
 .o.lenovo.com
 .o2o-ad-dev.oss-cn-shanghai.aliyuncs.com
 .o2o.api.xiaomi.com
@@ -5322,13 +5351,14 @@
 .oceanengine.com
 .odc.weather.com
 .odp.optimizely.com
+.offer.alibaba.com
 .officedepot.com.data.adobedc.net
 .officehub.nel.measure.office.net
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
-.oi8ytfzxa.appspot.com
+.oimsgad.qq.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -5390,6 +5420,7 @@
 .p.hentaiforce.net
 .p.imgur.com
 .p.kugou.com
+.p.reuters.com
 .p.skimresources.com
 .p.store.qq.com
 .p.tanx.com
@@ -5460,6 +5491,7 @@
 .pcdn.xmcdn.com
 .pcdn.yximgs.com
 .pcfg.wps.cn
+.pchur.belkin.com
 .pcm-img.zhls.qq.com
 .pcmx.autohome.com.cn
 .pcookie.aliexpress.com
@@ -5538,6 +5570,8 @@
 .ping.acc.sogou.com
 .pingback.giphy.com
 .pingback.sogou.com
+.pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -5615,7 +5649,6 @@
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
 .posthog-proxy-service-prod-us-786081f7c4028325.elb.us-east-1.amazonaws.com
 .posthog.substack.com
-.postmediamontrealgazette2.files.wordpress.com
 .powerpoint-telemetry.officeapps.live.com
 .powr-counter.herokuapp.com
 .ppc-excel-telemetry.officeapps.live.com
@@ -5627,7 +5660,6 @@
 .pr.prnewswire.com
 .practivate.adobe.com
 .prd-dvc-pod3-telemetry-alb-podlb-2098002532.us-east-1.elb.amazonaws.com
-.prd-lender.cdp.internal.unity3d.com
 .prd-usw2-requestattribution-iad.apple.com
 .prebid-collector-lb-321145981.eu-west-1.elb.amazonaws.com
 .prebid-server-production.herokuapp.com
@@ -5636,6 +5668,7 @@
 .presence.teams.live.com
 .presentationtracking.netflix.com
 .preview.msn.com
+.prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
 .privacyfriendly.netlify.app
@@ -5732,8 +5765,10 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
+.qqlogo.qq.com
 .qqshow2-item.qq.com
 .qreport.qunar.com
+.qring-tms.qq.com
 .qrl.existence.pp.ua
 .qss-client.qq.com
 .quantserve.com
@@ -5760,8 +5795,10 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
+.rads.stackoverflow.com
 .rai-amp-telemetry-ingestion.azurewebsites.net
 .raine.accuweather.com
+.rapid-glade-cde8.asoumare042024.workers.dev
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
 .rawtelemetry-east.servicebus.windows.net
@@ -5836,6 +5873,7 @@
 .rhcvuy2die.data.adobedc.net
 .rich.qq.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .rics.data.adobedc.net
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -5891,7 +5929,6 @@
 .rum.us-west-1.amazonaws.com
 .rum.us-west-2.amazonaws.com
 .rus.miui.com
-.ruw82qpzxas.appspot.com
 .s-adashx.ut.uc.cn
 .s.360.cn
 .s.baidu.com
@@ -6039,6 +6076,7 @@
 .shooter.m.jd.com
 .shouji.360.cn
 .shouji.sogou.com
+.show-msgch.qq.com
 .show.look.360.cn
 .showmax.data.adobedc.net
 .showwxml.qq.com
@@ -6067,7 +6105,6 @@
 .sm.toutiao.com
 .smartad.10010.com
 .smartadserver.com.akamaized.net
-.smartlock.google.com
 .smetrics.afpjobs.amazon.com
 .smetrics.digicert.com
 .smetrics.elsevier.com
@@ -6128,6 +6165,7 @@
 .splashqqlive.gtimg.com
 .spo.nel.measure.office.net
 .spocs.getpocket.com
+.spolecznosci.mgr.consensu.org
 .sponsor-logos.s3.amazonaws.com
 .spoor-api.ft.com
 .sprig.com
@@ -6203,6 +6241,7 @@
 .stats.bbc.co.uk
 .stats.blogger.com
 .stats.condenastdigital.com
+.stats.fastcompany.com
 .stats.figshare.com
 .stats.kaltura.com
 .stats.kde.org
@@ -6255,6 +6294,7 @@
 .superrtl.data.adobedc.net
 .supportmetrics.apple.com
 .supportmetrics.v.aaplimg.com
+.survey.china.alibaba.com
 .surveygizmobeacon.s3.amazonaws.com
 .susapi.lenovomm.com
 .suvset.sohu.com
@@ -6401,7 +6441,7 @@
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
-.tir94wepsdxox.appspot.com
+.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -6456,6 +6496,7 @@
 .toolbar.baidu.com
 .toolbar.google.com
 .toolbar.msn.com
+.toolbar.soso.com
 .tools.3g.qq.com
 .tools.prnewswire.com
 .top.h.qhimg.com
@@ -6471,7 +6512,6 @@
 .tpush.html5.qq.com
 .tr.p.360.cn
 .tr.www.cloudflare.com
-.tr54sdsazxas.appspot.com
 .trace.qq.com
 .trace.svc.ui.com
 .trace.zhiyan.tencent-cloud.net
@@ -6535,7 +6575,6 @@
 .trkhinv.business.hsbc.com.hk
 .trksvg.business.hsbc.com.hk
 .trtcmobileappprod.data.adobedc.net
-.tru465rsda.appspot.com
 .tsb.data.adobedc.net
 .tsearch.snssdk.com
 .tsyndicate.com
@@ -6574,6 +6613,7 @@
 .udc.msn.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
+.uedata.amazon.com
 .ueisnifferengine2.azurewebsites.net
 .ufosdk.baidu.com
 .ug-sg.byteoversea.com
@@ -6634,9 +6674,11 @@
 .unionimage.baidu.com
 .unitacs.m.taobao.com
 .unitelogreport.reader.qq.com
+.unityads.unity.cn
 .unityads.unity3d.com
 .universalorlando.com.data.adobedc.net
 .universalstudioshollywood.com.data.adobedc.net
+.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -6687,7 +6729,6 @@
 .uve.weibo.com
 .uvgxhu.ezgif.com
 .uvk.3hentai.net
-.uy054eprsdoz.appspot.com
 .uyunad.com
 .uz-analysis.akamaized.net
 .v.miguvideo.com
@@ -6720,6 +6761,7 @@
 .vd.emp.prd.s3.amazonaws.com
 .vebo-vast.pages.dev
 .vegslb.com
+.vendorlist.consensu.org
 .venezia-measurements.s3-external-1.amazonaws.com
 .vf.startpage.com
 .vgaxvbcqd8.data.adobedc.net
@@ -6747,6 +6789,8 @@
 .vmat.gtimg.com
 .vmonitor.ws.netease.com
 .vodus-api-serverless.azurewebsites.net
+.vodus-api.azurewebsites.net
+.voduscdn.azureedge.net
 .volceapplog.com
 .volcsiriusbd.com
 .volkswagenofamerica.data.adobedc.net
@@ -6836,7 +6880,6 @@
 .win1710.ipv6.microsoft.com
 .win8.ipv6.microsoft.com
 .window-shoppers.azurewebsites.net
-.windowsphishingalert158.s3.amazonaws.com
 .winonexd.b-cdn.net
 .wip3.adobe.com
 .wisepush.video.baidu.com
@@ -6879,6 +6922,8 @@
 .www-fmhy.pages.dev
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
+.www.addtoany.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -6892,7 +6937,6 @@
 .x.skimresources.com
 .x.weather.com
 .x9t7g4m2qk2.azurewebsites.net
-.xasf32easzx.appspot.com
 .xblgdvrassets3010.blob.core.windows.net
 .xc.mydrivers.com
 .xcf-bd-js.chuimg.com
@@ -6910,7 +6954,6 @@
 .xmaterial.tu.qq.com
 .xmpush.xiaomi.com
 .xne1ocient87zxz.360doc.cn
-.xoada0pzosa.appspot.com
 .xp2023-pix.s3.amazonaws.com
 .xpj08.oss-cn-beijing.aliyuncs.com
 .xpjcg.oss-accelerate.aliyuncs.com
@@ -6951,10 +6994,7 @@
 .ys2000.cdn.bcebos.com
 .yt-adp.nosdn.127.net
 .yt-adp.ws.126.net
-.ytuy45fxs.appspot.com
-.yu56tdfcxc.appspot.com
 .yuedu.iqiyi.com
-.yuhfdwesaa.appspot.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
 .yunxinfw.com
@@ -7031,6 +7071,7 @@ api-scout.vercel.app
 api.chat.xiaomi.net
 api.e.kuaishou.com
 api.hybrid.intl.xiaomi.com
+api.sec.intl.miui.com
 api.yuedu.iqiyi.com
 api2.e.kuaishou.com
 apiv4-iyes.youku.com
@@ -7201,7 +7242,6 @@ prod.nexusrules.live.com
 public.gdtimg.com
 qgnu18wo.sina.cn
 qiye.xiaomi.com
-qring-tms.qq.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
 qzs.gdtimg.com
 r.dmp.sina.cn
