--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-09-09 09:34:42
-# Total rules: 7026
+# Generated from relevant_rules_wildcard_aware.txt on 2025-09-10 11:38:18
+# Total rules: 6997
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -42,9 +42,7 @@
 .3kbmk3nerc.data.adobedc.net
 .3rd.t.sohu.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
-.4393eb8c.solaraweb-alj.pages.dev
 .51.la
-.60aaf9c6.salamanderprocessing.pages.dev
 .64vxnlajoo.data.adobedc.net
 .682a5845.b-cdn.net
 .70e0lr7rnk.data.adobedc.net
@@ -234,7 +232,6 @@
 .a25166270452.cdn.optimizely.com
 .a25178000050.cdn.optimizely.com
 .a25237771658.cdn.optimizely.com
-.a25243521002.cdn.optimizely.com
 .a25251511284.cdn.optimizely.com
 .a25264541367.cdn.optimizely.com
 .a25342060228.cdn.optimizely.com
@@ -268,7 +265,6 @@
 .a2627010012.cdn.optimizely.com
 .a26310890636.cdn.optimizely.com
 .a26330300728.cdn.optimizely.com
-.a26334390584.cdn.optimizely.com
 .a26412040784.cdn.optimizely.com
 .a26536550308.cdn.optimizely.com
 .a26549020246.cdn.optimizely.com
@@ -295,7 +291,6 @@
 .a27224800026.cdn.optimizely.com
 .a27268010056.cdn.optimizely.com
 .a27274641010.cdn.optimizely.com
-.a27469530272.cdn.optimizely.com
 .a27990360155.cdn.optimizely.com
 .a28007920049.cdn.optimizely.com
 .a28218570026.cdn.optimizely.com
@@ -324,7 +319,6 @@
 .a4477903919.cdn.optimizely.com
 .a4513484151455744.cdn.optimizely.com
 .a4533470681104384.cdn.optimizely.com
-.a4544552325873664.cdn.optimizely.com
 .a4614783295553536.cdn.optimizely.com
 .a4621041136.cdn.optimizely.com
 .a4663953347837952.cdn.optimizely.com
@@ -343,7 +337,6 @@
 .a5354424722259968.cdn.optimizely.com
 .a5364082103025664.cdn.optimizely.com
 .a5366642083889152.cdn.optimizely.com
-.a5590338467790848.cdn.optimizely.com
 .a5595260258.cdn.optimizely.com
 .a5607107806887936.cdn.optimizely.com
 .a5676741851611136.cdn.optimizely.com
@@ -705,7 +698,6 @@
 .adsensecustomsearchads.com
 .adserver-1277986481.ap-northeast-1.elb.amazonaws.com
 .adserver-1768966121.us-east-1.elb.amazonaws.com
-.adserver-1964701068.eu-west-1.elb.amazonaws.com
 .adserver-2084671375.us-east-1.elb.amazonaws.com
 .adserver-alb-prod-1154786121.us-east-1.elb.amazonaws.com
 .adserver-load-balancer-449180619.us-east-1.elb.amazonaws.com
@@ -800,6 +792,7 @@
 .adzerk.s3.amazonaws.com
 .ae-alimelog.taobao.com
 .ae.bdstatic.com
+.aecpm.alicdn.com
 .aedns.weixin.qq.com
 .aegis.qq.com
 .aepxlg.adobe.com
@@ -808,8 +801,10 @@
 .affiliates.bhphotovideo.com
 .affilimate.io
 .affim.baidu.com
+.afp.alicdn.com
 .afp.iqiyi.com
 .afpeng.alimama.com
+.afpmm.alicdn.com
 .afpssp.alimama.com
 .afptrack.alimama.com
 .afs.googleusercontent.com
@@ -823,11 +818,11 @@
 .ai.m.taobao.com
 .ai.taobao.com
 .aic-ngfts.lge.com
-.aidacruisesgerman.data.adobedc.net
 .aidsvc.netflix.com
 .aircanada.data.adobedc.net
 .airlytics.airlock.twcmobile.weather.com
 .aixuntupian.oss-cn-hongkong.aliyuncs.com
+.aizhantj.com
 .ak-events-collector.spot.im
 .akxmagzkoo.com
 .al.autohome.com.cn
@@ -842,6 +837,7 @@
 .ali-p2p.pull.yximgs.com
 .ali-web-player-tracker.biliapi.net
 .aliapp.org
+.alimama.alicdn.com
 .alime-pic.oss-cn-hangzhou.aliyuncs.com
 .alimelog.taobao.com
 .alindflepkaty14.pages.dev
@@ -875,6 +871,7 @@
 .analy.qq.com
 .analytics-alv.google.com
 .analytics-api-s.cloudinary.com
+.analytics-api.smzdm.com
 .analytics-consent-manager-v2-prod.azureedge.net
 .analytics-consent-manager.azureedge.net
 .analytics-events.apple.com
@@ -1068,6 +1065,7 @@
 .appconf-ocs-in.heytapdl.com.akamaized.net
 .appconf-ocs-sgp.heytapdl.com.akamaized.net
 .appconf-sgp.heytapdl.com.akamaized.net
+.appdownload.alicdn.com
 .appdownload.youku.com
 .appgiftwall.oss-us-west-1.aliyuncs.com
 .applab-sdk.amazon.com
@@ -1099,10 +1097,13 @@
 .as.weixin.qq.com
 .as1.wenku.baidu.com
 .ascpqnj-oam.global.ssl.fastly.net
+.asearch.alicdn.com
 .asia-northeast1-affiliate-pr.cloudfunctions.net
 .assistjs.skimresources.com
 .assp.sohu.com
 .astat-bugly-tgw4l.mig.tencent-cloud.net
+.atanx.alicdn.com
+.atanx2.alicdn.com
 .athena.archive.org
 .athome.com.data.adobedc.net
 .ati-a1.946d001b783803c1.xhst.bbci.co.uk
@@ -1123,7 +1124,6 @@
 .audio.ali.xmcdn.com
 .audit.aaa.mgtv.com
 .aurora-d3.herokuapp.com
-.australiapost.data.adobedc.net
 .auth.be.sec.miui.com
 .auth.wosms.cn
 .authbe.sec.intl.miui.com
@@ -1149,6 +1149,7 @@
 .badge.facebook.com
 .badges.instagram.com
 .badjs.weixinbridge.com
+.baichuan-sdk.alicdn.com
 .baichuan-sdk.taobao.com
 .baichuan.baidu.com
 .baidustatic.com
@@ -1321,11 +1322,9 @@
 .c.wired.com
 .c.yes.youku.com
 .c00.adobe.com
-.c0e5b87c.solaraweb-alj.pages.dev
 .c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
 .c1.microsoft.com
-.c3436037.salamanderprocessing.pages.dev
 .c4-ads-creative-prod.s3.eu-west-1.amazonaws.com
 .c783.fastcompany.com
 .cache.datamart.windows.com
@@ -1486,6 +1485,7 @@
 .cms.tanx.com
 .cms.ucweb.com
 .cmshow.gtimg.cn
+.cn-vmc-images.alicdn.com
 .cn.vercount.one
 .cnbj1.fds.api.xiaomi.com
 .cnc-ad-script-uncached.b-cdn.net
@@ -1515,7 +1515,6 @@
 .collector-px2e972lwz.px-cloud.net
 .collector-px2sz8xyop.px-cloud.net
 .collector-px2yes24ut.px-cloud.net
-.collector-px35rnwkzs.px-cloud.net
 .collector-px3c3ez9ug.px-cloud.net
 .collector-px3d8mkyg1.px-cloud.net
 .collector-px3vk96i6i.px-cloud.net
@@ -1577,7 +1576,6 @@
 .collector-pxio2jpcn8.px-cloud.net
 .collector-pxirnc16b3.px-cloud.net
 .collector-pxiuboghjl.px-cloud.net
-.collector-pxiwpggue9.px-cloud.net
 .collector-pxj4y0bbmn.px-cloud.net
 .collector-pxj5wgkw4q.px-cloud.net
 .collector-pxj770cp7y.px-cloud.net
@@ -1594,7 +1592,6 @@
 .collector-pxkm4nwu16.px-cloud.net
 .collector-pxkogoppbz.px-cloud.net
 .collector-pxkp4clsb5.px-cloud.net
-.collector-pxkpxdp0r3.px-cloud.net
 .collector-pxktmrtopw.px-cloud.net
 .collector-pxkz8zzqmw.px-cloud.net
 .collector-pxl3efeja7.px-cloud.net
@@ -1613,7 +1610,6 @@
 .collector-pxnp9b16cq.px-cloud.net
 .collector-pxnslc0hv5.px-cloud.net
 .collector-pxnyx0n2sc.px-cloud.net
-.collector-pxo1gdta7q.px-cloud.net
 .collector-pxo4bopf13.px-cloud.net
 .collector-pxo7xa8y7a.px-cloud.net
 .collector-pxo97ybh4j.px-cloud.net
@@ -1629,7 +1625,6 @@
 .collector-pxqegyaqlb.px-cloud.net
 .collector-pxqqxm841a.px-cloud.net
 .collector-pxrf8vapwa.px-cloud.net
-.collector-pxrvwi1b26.px-cloud.net
 .collector-pxs0ivy1pq.px-cloud.net
 .collector-pxs2wzhau8.px-cloud.net
 .collector-pxslc3j22k.px-cloud.net
@@ -1663,7 +1658,6 @@
 .collector-pxxljwhhue.px-cloud.net
 .collector-pxxmpxrqpa.px-cloud.net
 .collector-pxxnqyudif.px-cloud.net
-.collector-pxxofe8j8b.px-cloud.net
 .collector-pxxor1k5b6.px-cloud.net
 .collector-pxxrgqapjl.px-cloud.net
 .collector-pxxt4gy2ig.px-cloud.net
@@ -1674,7 +1668,6 @@
 .collector-pxyvg65jje.px-cloud.net
 .collector-pxyzupxxw0.px-cloud.net
 .collector-pxz5wgh7n9.px-cloud.net
-.collector-pxzc5j78di.px-cloud.net
 .collector-pxzcx1k7er.px-cloud.net
 .collector-pxzdyjqpod.px-cloud.net
 .collector-pxzg5bkbll.px-cloud.net
@@ -1734,7 +1727,6 @@
 .corp.sohu.com
 .corp.sts.microsoft.com
 .corpext.msitadfs.glbdns2.microsoft.com
-.cortalconsors1.data.adobedc.net
 .cortana-gateway.amazon.com
 .count.mail.163.com
 .count.video.sina.com.cn
@@ -1793,7 +1785,6 @@
 .cryweb.github.io
 .cs-feige.iqiyi.com
 .csi.gstatic.com
-.cskwshp5bw.data.adobedc.net
 .csp-collector.appspot.com
 .csp-reporting.cloudflare.com
 .csp.godaddy.com
@@ -2129,7 +2120,6 @@
 .d1of5w8unlzqtg.cloudfront.net
 .d1okyw2ay5msiy.cloudfront.net
 .d1ol7fsyj96wwo.cloudfront.net
-.d1om9znyumzhxf.cloudfront.net
 .d1on4urq8lvsb1.cloudfront.net
 .d1or04kku1mxl9.cloudfront.net
 .d1ou8n65t6oyh4.cloudfront.net
@@ -2308,7 +2298,6 @@
 .d22v2nmahyeg2a.cloudfront.net
 .d22xmn10vbouk4.cloudfront.net
 .d22z575k8abudv.cloudfront.net
-.d2314eac.solaraweb-alj.pages.dev
 .d232dy72shugnx.cloudfront.net
 .d235m8fpdlskx9.cloudfront.net
 .d236v5t33fsfwk.cloudfront.net
@@ -3032,7 +3021,6 @@
 .d3v1lb83psg9di.cloudfront.net
 .d3v3bqdndm4erx.cloudfront.net
 .d3vebqdofhigrn.cloudfront.net
-.d3vk40ihlliju7.cloudfront.net
 .d3vnm1492fpnm2.cloudfront.net
 .d3vp85u5z4wlqf.cloudfront.net
 .d3vpf6i51y286p.cloudfront.net
@@ -3230,7 +3218,6 @@
 .dataflow.biliapi.com
 .datax.baidu.com
 .date2night.b-cdn.net
-.dating.xokone7750.workers.dev
 .dax3x3wqpt2q3.cloudfront.net
 .day13vh1xl0gh.cloudfront.net
 .dazu57wmpm14b.cloudfront.net
@@ -3481,7 +3468,6 @@
 .dns.weixin.qq.com.cn
 .dns.ximalaya.com
 .dnxlgencstz4.cloudfront.net
-.dnzedhceh7nim.cloudfront.net
 .do0digwedphcm.cloudfront.net
 .do1dns3y1w33m.cloudfront.net
 .do6256x8ae75.cloudfront.net
@@ -3499,11 +3485,11 @@
 .dojy0dg181308.cloudfront.net
 .dokzl8xhmt1x7.cloudfront.net
 .dollargeneral.data.adobedc.net
-.domainservernet.vercel.app
 .domcwlxin.360doc.cn
 .dongtukj.oss-cn-hongkong.aliyuncs.com
 .doo6pwib3qngu.cloudfront.net
 .doo9gpa5xdov2.cloudfront.net
+.dorangesource.alicdn.com
 .doubleclick-cn.net
 .doubleclick.net
 .doubleverify.com
@@ -3529,7 +3515,6 @@
 .dpi.networkorder.komect.com
 .dpirwgljl6cjp.cloudfront.net
 .dpjlvaveq1byu.cloudfront.net
-.dpl-pr-googletm-tagging-1717453208.eu-central-1.elb.amazonaws.com
 .dppaivsn6f9dy.cloudfront.net
 .dpsq2uzakdgqz.cloudfront.net
 .dpst35vkvd2u3.cloudfront.net
@@ -3622,7 +3607,6 @@
 .dvbee3zterhof.cloudfront.net
 .dvc8653ec6uyk.cloudfront.net
 .dvh66m0o7et0z.cloudfront.net
-.dvhpp880pe.data.adobedc.net
 .dvl8xapgpqgc1.cloudfront.net
 .dvmdwmnyj3u4h.cloudfront.net
 .dvv009j588zal.cloudfront.net
@@ -3735,7 +3719,6 @@
 .ems.youku.com
 .enc-90128738.b-cdn.net
 .enchantestore.myshopify.com
-.enelglobal.data.adobedc.net
 .enquiries.sciencedirect.com
 .enrichgw.10010.com
 .ensighten.bhphoto.com
@@ -3767,7 +3750,6 @@
 .euc-visio-telemetry.officeapps.live.com
 .euc-word-telemetry.officeapps.live.com
 .eum-appdynamics.com
-.eurobet.data.adobedc.net
 .europe-west1-sonorous-dragon-276210.cloudfunctions.net
 .event-collector-lb-478759435.us-east-1.elb.amazonaws.com
 .event-dot-learning-piano.appspot.com
@@ -3784,6 +3766,7 @@
 .events-collector.spot.im
 .events.api.godaddy.com
 .events.bsky.app
+.events.fivetran.com
 .events.framer.com
 .events.iap.unity3d.com
 .events.launchdarkly.com
@@ -3852,11 +3835,9 @@
 .fifththirdbank.data.adobedc.net
 .filament-stats.herokuapp.com
 .filamentapp.s3.amazonaws.com
-.file-lin2.vercel.app
 .file.daihuo.qq.com
 .files2.sogou.com
 .findapi.micloud.xiaomi.net
-.findomestic.data.adobedc.net
 .fingerprinter-production.herokuapp.com
 .finnews7.wordpress.com
 .firebase.googleapis.com
@@ -3881,7 +3862,6 @@
 .fls-na.amazon.com
 .flurry.cachefly.net
 .fm.qzone.qq.com
-.fmhy-net.pages.dev
 .fodder.qq.com
 .fodder.tc.qq.com
 .folkrbvi.pages.dev
@@ -3905,7 +3885,6 @@
 .fpt.microsoft.com
 .fra-01.braze.eu
 .fra-02.braze.eu
-.fraport.com.data.adobedc.net
 .free-cdn.oss-cn-shanghai.aliyuncs.com
 .freebitcoin.pages.dev
 .freewheel-mtgx-tv.akamaized.net
@@ -3972,6 +3951,7 @@
 .gecko3-lf.zijieapi.com
 .gecko5-lf.zijieapi.com
 .geekupdates.notion.site
+.gen.alicdn.com
 .geo.adobe.com
 .geo2.adobe.com
 .geolocation.nexusmedia.workers.dev
@@ -4006,6 +3986,7 @@
 .global-ad-intl-pri-alisgp.alb.xiaomi.com
 .global-staticplat.cdn.bcebos.com
 .globalvideo.cdn.pandora.intl.xiaomi.com
+.gma.alicdn.com
 .gmfinancial.data.adobedc.net
 .gn-flagpoles.api.bbci.co.uk
 .gnar.grammarly.com
@@ -4040,10 +4021,8 @@
 .grand.ele.me
 .graph-fallback.instagram.com
 .graph.instagram.com
-.grasimindustries.data.adobedc.net
 .green-griffin-860.appspot.com
 .gridsumdissector.com
-.groupedelhaize.data.adobedc.net
 .growth-pa.googleapis.com
 .gslbali.ximalaya.com
 .gsp1.baidu.com
@@ -4053,6 +4032,7 @@
 .gtm.shopify.com
 .gtm.tipranks.com
 .gtm.wise.com
+.gtmsdd.alicdn.com
 .gtreus.aliexpress.com
 .gtrk.s3.amazonaws.com
 .guanjia.baidu.com
@@ -4098,7 +4078,6 @@
 .he5ek4z54w.data.adobedc.net
 .heads-fa.spotify.com
 .health-metrics-api.setapp.com
-.helsana.ch.data.adobedc.net
 .heoads.b-cdn.net
 .hesads.akamaized.net
 .hg-statsd.setapp.com
@@ -4197,10 +4176,8 @@
 .honey.io
 .hongkongbaptistuniversity.data.adobedc.net
 .hoplink.ksosoft.com
-.hostplusptyltd.data.adobedc.net
 .hosts.vggwebsitetrackingprod.azurewebsites.net
 .hotchat-im.iqiyi.com
-.hotelembuguacu.blob.core.windows.net
 .houyi.kkmh.com
 .hpd.baidu.com
 .hpplay.cn
@@ -4212,6 +4189,7 @@
 .httpdns-api.aliyuncs.com
 .httpdns-sc.aliyuncs.com
 .httpdns-sdk.n.netease.com
+.httpdns.alicdn.com
 .httpdns.aliyuncs.com
 .httpdns.baidu.com
 .httpdns.bilivideo.com
@@ -4301,6 +4279,7 @@
 .igcum80w74.data.adobedc.net
 .igexin.com
 .ikcode.baidu.com
+.ilce.alicdn.com
 .ilive.qq.com
 .ilyonanalytics.herokuapp.com
 .im-x.jd.com
@@ -4401,7 +4380,6 @@
 .isdspeed.qq.com
 .isite.baidu.com
 .isx.unity3d.com
-.itaspa.data.adobedc.net
 .its-dori.tumblr.com
 .itsdata.map.baidu.com
 .ivkpkdxs6q.data.adobedc.net
@@ -4481,7 +4459,6 @@
 .kstj.baidu.com
 .kuaibao.qq.com
 .kuiniuca.com
-.kuwaitpetroleumit.data.adobedc.net
 .kwurl.ucweb.com
 .kxlogo.knet.cn
 .l.qq.com
@@ -4492,7 +4469,6 @@
 .l4-logs-http-rum-pub-s1-6386d34262e59173.elb.us-east-1.amazonaws.com
 .l4-metrics-agent-s0-7c551d28c9ca34fc.elb.us-east-1.amazonaws.com
 .l4-metrics-agent-s1-56401ca284db905a.elb.us-east-1.amazonaws.com
-.l8rfjhnzvs.data.adobedc.net
 .labadena.com
 .lacaixa.data.adobedc.net
 .landing.ultimate-success-emea.test.ajo.adobe.com
@@ -4511,7 +4487,6 @@
 .lgtvcommon.com
 .lianmeng.360.cn
 .libfre.obs.cn-east-3.myhuaweicloud.com
-.librarium.us
 .libs.baidu.com
 .link.medium.com
 .link.reuters.com
@@ -4888,6 +4863,7 @@
 .mjca-yijws.global.ssl.fastly.net
 .ml314.com
 .mllog.jd.com
+.mlpoo11-secondary.z13.web.core.windows.net
 .mmgame.qpic.cn
 .mms.lifehacker.com
 .mn.qwant.com
@@ -5018,6 +4994,7 @@
 .nbcollect.kugou.com
 .nbcollectretry.kugou.com
 .nbcuniversal.data.adobedc.net
+.nbsdk-baichuan.alicdn.com
 .nbsdk-baichuan.m.taobao.com
 .nbsdk-baichuan.taobao.com
 .ndct-data.video.iqiyi.com
@@ -5424,6 +5401,7 @@
 .promote.telegram.org
 .promotion-partner.kuaishou.com
 .propsid.b-cdn.net
+.proxy-mob-cld.alicdn.com
 .proxy-skadnetwork.apple.com
 .proxy.sec.miui.com
 .prt-stsdk.vivo.com.cn
@@ -5476,7 +5454,6 @@
 .px.wpk.quark.cn
 .pyk.in-neo.cn
 .q0jo16uy1r.data.adobedc.net
-.qalsqqphhy.data.adobedc.net
 .qantasairways.data.adobedc.net
 .qapm.baidu.com
 .qc.arstechnica.com
@@ -5523,7 +5500,6 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
-.rai-amp-telemetry-ingestion.azurewebsites.net
 .raine.accuweather.com
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
@@ -5533,7 +5509,6 @@
 .rcm-images.amazon.com
 .rcm-jp.amazon.co.jp
 .rcm.amazon.com
-.rcsdigital.data.adobedc.net
 .rd.autohome.com.cn
 .rd.e.sogou.com
 .rdelivery.qq.com
@@ -5769,7 +5744,6 @@
 .sentry.d.xiaomi.net
 .sentry.io
 .sentry.music.163.com
-.server-side-tagging-alb-1532029273.eu-central-1.elb.amazonaws.com
 .server.iad.liveperson.net
 .serveraddr.service.kugou.com
 .service.danmu.youku.com
@@ -5778,7 +5752,6 @@
 .sf1-ttcdn-tos.pstatp.com
 .sf3-ttcdn-tos.pstatp.com
 .sfp.safe.baidu.com
-.sfr.data.adobedc.net
 .sfsafsadfjbbj-dsafjnb-1321533417.cos.ap-beijing.myqcloud.com
 .sg.a.stat.mi.com
 .sg2p.wns.windows.com
@@ -5788,7 +5761,6 @@
 .sgtm.jetbrains.com
 .sgtm.springer.com
 .sgtm.springernature.com
-.sgtm.tourist-online.de.cdn.cloudflare.net
 .sh.apigw.tencentcs.com
 .shadu.baidu.com
 .shaquevip.oss-cn-zhangjiakou.aliyuncs.com
@@ -5887,6 +5859,7 @@
 .splash-online-decision.xiaohongshu.com
 .splashimgbssdl.yun.kugou.com
 .splashqqlive.gtimg.com
+.splitbee.io
 .spo.nel.measure.office.net
 .spocs.getpocket.com
 .sponsor-logos.s3.amazonaws.com
@@ -6001,6 +5974,7 @@
 .store.tv.api.3g.youku.com
 .store.xiaohongshu.com
 .store.xl.api.3g.youku.com
+.strip.alicdn.com
 .strip.taobaocdn.com
 .stsdk.vivo.com.cn
 .su.bdimg.com
@@ -6093,6 +6067,7 @@
 .tbskip.taobao.com
 .tc-sentry-01-alb-1714232555.us-east-1.elb.amazonaws.com
 .tcbox.baidu.com
+.tce.alicdn.com
 .tci.oss-ap-southeast-1.aliyuncs.com
 .tcss.qq.com
 .tdc.qq.com
@@ -6108,7 +6083,6 @@
 .telemetry-coverage.mozilla.org
 .telemetry-incoming.r53-2.services.mozilla.com
 .telemetry-prod-1054754349.us-east-1.elb.amazonaws.com
-.telemetry-update.endpointcache.workers.dev
 .telemetry.adblockplus.org
 .telemetry.adobe.io
 .telemetry.appex.bing.com
@@ -6200,7 +6174,6 @@
 .tnc3-bjlgy.bytedance.com
 .tnc3-bjlgy.snssdk.com
 .tnc3-bjlgy.zijieapi.com
-.tnc31-platform-useast2a.tiktokv.com
 .tns.simba.taobao.com
 .tob-tracker.yximgs.com
 .tocukgaytx.data.adobedc.net
@@ -6360,8 +6333,8 @@
 .um.hd.sohu.com
 .umami-self-host-example.vercel.app
 .umami-tutorial.vercel.app
-.umami.chimbori.com
 .umami.dev
+.umc.danuoyi.alicdn.com
 .umeng.com
 .umeng.com.gds.alibabadns.com
 .umengacs.m.taobao.com
@@ -6380,6 +6353,7 @@
 .unagi.amazon.com
 .unibotscdn.b-cdn.net
 .uniconsent.com
+.unidesk.alicdn.com
 .unifi-report.ubnt.com
 .uniformadvantage.data.adobedc.net
 .union.360.cn
@@ -6467,7 +6441,6 @@
 .vbc-telemetry-prod.s3.amazonaws.com
 .vbzxsg2ebt.data.adobedc.net
 .vcardsdkservice.vivo.com.cn
-.vcenyzahqf.data.adobedc.net
 .vcl-brain.snssdk.com
 .vconf.f.360.cn
 .vcs.zijieapi.com
@@ -6629,7 +6602,6 @@
 .wtr-digital-analytics.ew.r.appspot.com
 .wwads.cn
 .wwis-dubc1-vip60.adobe.com
-.www-fmhy.pages.dev
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
 .www.addtoany.com
@@ -6689,7 +6661,6 @@
 .ykad-data.cp31.ott.cibntv.net
 .ykad-data.youku.com
 .ykad-gateway.youku.com
-.ykapi.luyou.360.cn
 .ykatr.youku.com
 .ykrec.youku.com
 .ykrectab.youku.com
