--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-09-13 10:19:37
-# Total rules: 7287
+# Generated from relevant_rules_wildcard_aware.txt on 2025-09-14 10:36:23
+# Total rules: 7296
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -861,6 +861,7 @@
 .adsmind.tc.qq.com
 .adsmind.ugdtimg.com.tcdn.qq.com
 .adsninja.b-cdn.net
+.adsninja.ca
 .adsninjacdn.b-cdn.net
 .adsqqclick.qq.com
 .adsrich.qq.com
@@ -908,6 +909,7 @@
 .advertising.microsoft.com
 .advertising.twitter.com
 .advice-ads.s3.amazonaws.com
+.advoncommerce.com
 .advp.apple.com
 .adwbs.ximalaya.com
 .adweb.ximalaya.com
@@ -1935,6 +1937,7 @@
 .config.uca.cloud.unity3d.com
 .config1.cmpassport.com
 .config2.cmpassport.com
+.connatix.com
 .connectio.s3.amazonaws.com
 .connext-cdn.azureedge.net
 .consent.dropbox.com
@@ -3921,6 +3924,7 @@
 .easytomessage.com
 .eaus2watcab01.blob.core.windows.net
 .eaus2watcab02.blob.core.windows.net
+.ebxcdn.com
 .ec.yimg.com
 .ec2-44-233-143-239.us-west-2.compute.amazonaws.com
 .eclick.baidu.com
@@ -4029,7 +4033,6 @@
 .express-scripts.com.data.adobedc.net
 .expressscripts.data.adobedc.net
 .ext.chtbl.com
-.external-preview.redd.it
 .extlog.snssdk.com
 .ezrhirglfm.data.adobedc.net
 .f.convertkit.com
@@ -4657,6 +4660,7 @@
 .jiguang.cn
 .jingjia.qq.com
 .jioads.akamaized.net
+.jjpp.lmtjapi.com
 .jm.customer-success-apac.adobe.com
 .johnhancockfinancialservices.data.adobedc.net
 .join.zendesk.com
@@ -5085,6 +5089,7 @@
 .metrics.npr.org
 .metrics.nymag.com
 .metrics.proquest.com
+.metrics.rapidedge.io
 .metrics.sciencedirect.com
 .metrics.sites.stanford.edu
 .metrics.stanford.edu
@@ -5838,6 +5843,7 @@
 .report.trade.weixin.qq.com
 .report.tv.kohesport.qq.com
 .report.vip.qq.com
+.reports.koalametrics.com
 .request.verisign.com
 .res.mi.baidu.com
 .rescn.u3.ucweb.com
@@ -6014,6 +6020,7 @@
 .send.preply.com
 .sensors-pro-analytics-nlbtoalb-1031ce3406151b89.elb.ap-northeast-1.amazonaws.com
 .sensors.cloud.tencent.com
+.sentinelpro.com
 .sentry-new.myshopline.com
 .sentry.cointelegraph.com
 .sentry.d.xiaomi.net
@@ -6546,6 +6553,7 @@
 .trkhinv.business.hsbc.com.hk
 .trksvg.business.hsbc.com.hk
 .trtcmobileappprod.data.adobedc.net
+.tru.am
 .tsb.data.adobedc.net
 .tsearch.snssdk.com
 .tsyndicate.com
@@ -6955,6 +6963,7 @@
 .ykrectab.youku.com
 .ylwrobspod.data.adobedc.net
 .ym-tack.b-cdn.net
+.ymmiyun.com
 .yoo.gtimg.com
 .youborafds01.com
 .youku-acs.m.taobao.com
